fixed spacing for .ca

--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ html {
 		left: -9em;
 } 100% {
 		opacity: 1;
-		left: -4em;
+		left: -2em;
 	}
 }
 
@@ -119,7 +119,7 @@ html {
 		opacity: 0;
 	} 100% {
 		opacity: 1;
-		left: -4em;
+		left: -2em;
 	}
 }
 
